--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "font-awesome-icons": "^1.6.0",
+    "install": "^0.13.0",
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
