--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.6",
-    "bootstrap": "^5.2.3",
+    "axios": "^1.4.0",
+    "bootstrap": "^5.3.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "font-awesome": "^4.7.0",
     "font-awesome-icons": "^1.6.0",
     "install": "^0.13.0",
     "json-server": "^0.17.3",
+    "mongodb": "^5.7.0",
+    "mongoose": "^7.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
